[gd_scene load_steps=38 format=2]

[ext_resource path="res://media/image/creator.png" type="Texture" id=1]
[ext_resource path="res://media/image/crate_tiles.png" type="Texture" id=2]
[ext_resource path="res://src/menu/StartMenu.gd" type="Script" id=3]
[ext_resource path="res://media/image/HarmonyHoneyLogo.png" type="Texture" id=4]
[ext_resource path="res://media/font/ThaleahFat.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://media/font/ExpressionPro.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://media/image/8pixel.png" type="Texture" id=7]
[ext_resource path="res://src/stage/DetailTileMap.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/actor/Box.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/menu/AttractMode.gd" type="Script" id=10]
[ext_resource path="res://src/stage/SolidTileMap.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/actor/Player.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/stage/GameCamera.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/actor/SwitchBlockBlue.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/actor/SwitchBlue.tscn" type="PackedScene" id=15]
[ext_resource path="res://media/image/menu.png" type="Texture" id=16]
[ext_resource path="res://media/image/solid_bricks.png" type="Texture" id=17]
[ext_resource path="res://media/image/bricks.png" type="Texture" id=18]
[ext_resource path="res://media/image/player_swap.png" type="Texture" id=19]
[ext_resource path="res://media/image/diamond8.png" type="Texture" id=20]
[ext_resource path="res://src/menu/Blink.gd" type="Script" id=21]
[ext_resource path="res://src/actor/Exit.tscn" type="PackedScene" id=22]
[ext_resource path="res://media/font/m6x11.ttf" type="DynamicFontData" id=23]
[ext_resource path="res://media/font/QuinqueFive.ttf" type="DynamicFontData" id=24]
[ext_resource path="res://media/font/m3x6.tres" type="DynamicFont" id=25]

[sub_resource type="DynamicFont" id=3]
extra_spacing_top = -3
extra_spacing_bottom = -3
font_data = ExtResource( 6 )

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;

uniform vec4 hat : hint_color = vec4(0.0);
uniform vec4 eye : hint_color = vec4(0.0);
uniform vec4 skin : hint_color = vec4(0.0);
uniform vec4 suit : hint_color = vec4(0.0);
uniform vec4 shoe : hint_color = vec4(0.0);

uniform vec4 hat_swap : hint_color = vec4(0.0);
uniform vec4 eye_swap : hint_color = vec4(0.0);
uniform vec4 skin_swap : hint_color = vec4(0.0);
uniform vec4 suit_swap : hint_color = vec4(0.0);
uniform vec4 shoe_swap : hint_color = vec4(0.0);


void fragment(){
	vec4 col = texture(TEXTURE, UV);
	
	if (col == hat){
		col = hat_swap;
	}
	else if (col == eye){
		col = eye_swap;
	}
	else if (col == skin){
		col = skin_swap;
	}
	else if (col == suit){
		col = suit_swap;
	}
	else if (col == shoe){
		col = shoe_swap;
	}
	
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 8 )
shader_param/hat = Color( 1, 0, 0, 1 )
shader_param/eye = Color( 0, 1, 0, 1 )
shader_param/skin = Color( 0, 0, 1, 1 )
shader_param/suit = Color( 1, 1, 0, 1 )
shader_param/shoe = Color( 1, 0, 1, 1 )
shader_param/hat_swap = Color( 0.160784, 0.678431, 1, 1 )
shader_param/eye_swap = Color( 0.780392, 0, 1, 1 )
shader_param/skin_swap = Color( 0.87451, 1, 0, 1 )
shader_param/suit_swap = Color( 0, 1, 0.180392, 1 )
shader_param/shoe_swap = Color( 1, 0.117647, 0, 1 )

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 8 )
shader_param/hat = Color( 1, 0, 0, 1 )
shader_param/eye = Color( 0, 1, 0, 1 )
shader_param/skin = Color( 0, 0, 1, 1 )
shader_param/suit = Color( 1, 1, 0, 1 )
shader_param/shoe = Color( 1, 0, 1, 1 )
shader_param/hat_swap = Color( 1, 0.92549, 0.152941, 1 )
shader_param/eye_swap = Color( 1, 0.8, 0.666667, 1 )
shader_param/skin_swap = Color( 0.670588, 0.321569, 0.211765, 1 )
shader_param/suit_swap = Color( 0.160784, 0.678431, 1, 1 )
shader_param/shoe_swap = Color( 1, 0.8, 0.666667, 1 )

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 8 )
shader_param/hat = Color( 1, 0, 0, 1 )
shader_param/eye = Color( 0, 1, 0, 1 )
shader_param/skin = Color( 0, 0, 1, 1 )
shader_param/suit = Color( 1, 1, 0, 1 )
shader_param/shoe = Color( 1, 0, 1, 1 )
shader_param/hat_swap = Color( 0.85098, 0, 0.662745, 1 )
shader_param/eye_swap = Color( 0.0901961, 0.482353, 0.788235, 1 )
shader_param/skin_swap = Color( 1, 0.8, 0.666667, 1 )
shader_param/suit_swap = Color( 0.87451, 0.14902, 0.14902, 1 )
shader_param/shoe_swap = Color( 0.0901961, 0.482353, 0.788235, 1 )

[sub_resource type="Shader" id=16]
code = "shader_type canvas_item;

uniform vec4 hat : hint_color = vec4(0.0);
uniform vec4 eye : hint_color = vec4(0.0);
uniform vec4 skin : hint_color = vec4(0.0);
uniform vec4 suit : hint_color = vec4(0.0);
uniform vec4 shoe : hint_color = vec4(0.0);

uniform vec4 hat_swap : hint_color = vec4(0.0);
uniform vec4 eye_swap : hint_color = vec4(0.0);
uniform vec4 skin_swap : hint_color = vec4(0.0);
uniform vec4 suit_swap : hint_color = vec4(0.0);
uniform vec4 shoe_swap : hint_color = vec4(0.0);


void fragment(){
	vec4 col = texture(TEXTURE, UV);
	
	if (col == hat){
		col = hat_swap;
	}
	else if (col == eye){
		col = eye_swap;
	}
	else if (col == skin){
		col = skin_swap;
	}
	else if (col == suit){
		col = suit_swap;
	}
	else if (col == shoe){
		col = shoe_swap;
	}
	
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=15]
shader = SubResource( 16 )
shader_param/hat = Color( 1, 0, 0, 1 )
shader_param/eye = Color( 0, 1, 0, 1 )
shader_param/skin = Color( 0, 0, 1, 1 )
shader_param/suit = Color( 1, 1, 0, 1 )
shader_param/shoe = Color( 1, 0, 1, 1 )
shader_param/hat_swap = Color( 0.0980392, 0.984314, 0.192157, 1 )
shader_param/eye_swap = Color( 0, 0.0862745, 1, 1 )
shader_param/skin_swap = Color( 1, 0.843137, 0, 1 )
shader_param/suit_swap = Color( 0, 0.71875, 1, 1 )
shader_param/shoe_swap = Color( 0, 0.0862745, 1, 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
extra_spacing_top = -11
extra_spacing_bottom = -12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 5
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=18]
extra_spacing_bottom = -1
font_data = ExtResource( 23 )

[sub_resource type="TileSet" id=13]
0/name = "solid_bricks.png 0"
0/texture = ExtResource( 17 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 0.760784, 0.764706, 0.780392, 1 )
0/region = Rect2( 0, 0, 16, 8 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 8, 8 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "8pixel.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 0, 1, 0.33 )
1/region = Rect2( 0, 0, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=19]
4/name = "bricks.png 4"
4/texture = ExtResource( 18 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 0.372549, 0.341176, 0.309804, 1 )
4/region = Rect2( 0, 0, 40, 8 )
4/tile_mode = 2
4/autotile/icon_coordinate = Vector2( 0, 0 )
4/autotile/tile_size = Vector2( 8, 8 )
4/autotile/spacing = 0
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "crate_tiles.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 0, 0.529412, 0.317647, 1 )
5/region = Rect2( 0, 16, 24, 8 )
5/tile_mode = 2
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 8, 8 )
5/autotile/spacing = 0
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "crate_tiles.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 0.678431, 0, 0.156863, 1 )
6/region = Rect2( 0, 24, 8, 8 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[node name="StartMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}
open_player_path = NodePath("Control/Open/1/Player/Sprite")
demo_player_path = NodePath("Stage/Actors/Player")
cursor_offset = Vector2( -2, 0 )
cursor_expand = Vector2( 4, 0 )
color_deselect = Color( 0.8, 0.8, 0.8, 1 )
switch_cooldown = 0.13

[node name="Control" type="Control" parent="."]
margin_left = -24.0
margin_top = 12.0
margin_right = 204.0
margin_bottom = 140.0

[node name="Cursor" type="ColorRect" parent="Control"]
modulate = Color( 1, 0, 0.301961, 1 )
margin_left = 5.0
margin_top = 37.0
margin_right = 47.0
margin_bottom = 47.0
script = ExtResource( 21 )

[node name="Main" type="VBoxContainer" parent="Control"]
visible = false
margin_top = 32.0
margin_right = 72.0
margin_bottom = 104.0
custom_constants/separation = 5
alignment = 1

[node name="Item" type="HBoxContainer" parent="Control/Main"]
margin_left = 14.0
margin_top = 13.0
margin_right = 57.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 4
custom_constants/separation = 2

[node name="Image" type="Control" parent="Control/Main/Item"]
margin_right = 8.0
margin_bottom = 12.0
rect_min_size = Vector2( 8, 8 )

[node name="Sprite" type="Sprite" parent="Control/Main/Item/Image"]
position = Vector2( 0, 2 )
texture = ExtResource( 16 )
centered = false
hframes = 4
vframes = 4

[node name="Label" type="Label" parent="Control/Main/Item"]
margin_left = 10.0
margin_top = 2.0
margin_right = 43.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )
text = "play"
uppercase = true

[node name="Item2" type="HBoxContainer" parent="Control/Main"]
margin_left = 7.0
margin_top = 30.0
margin_right = 65.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 4
custom_constants/separation = 2

[node name="Image" type="Control" parent="Control/Main/Item2"]
margin_right = 8.0
margin_bottom = 12.0
rect_min_size = Vector2( 8, 8 )

[node name="Sprite" type="Sprite" parent="Control/Main/Item2/Image"]
position = Vector2( 0, 2 )
texture = ExtResource( 16 )
centered = false
hframes = 4
vframes = 4
frame = 1

[node name="Label" type="Label" parent="Control/Main/Item2"]
margin_left = 10.0
margin_top = 2.0
margin_right = 58.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )
text = "option"
uppercase = true

[node name="Item3" type="HBoxContainer" parent="Control/Main"]
margin_left = 7.0
margin_top = 47.0
margin_right = 65.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 4
custom_constants/separation = 2

[node name="Image" type="Control" parent="Control/Main/Item3"]
margin_right = 8.0
margin_bottom = 12.0
rect_min_size = Vector2( 8, 8 )

[node name="Sprite" type="Sprite" parent="Control/Main/Item3/Image"]
position = Vector2( 0, 2 )
texture = ExtResource( 16 )
centered = false
hframes = 4
vframes = 4
frame = 2

[node name="Label" type="Label" parent="Control/Main/Item3"]
margin_left = 10.0
margin_top = 2.0
margin_right = 58.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )
text = "credit"
uppercase = true

[node name="Quit" type="VBoxContainer" parent="Control"]
visible = false
margin_top = 32.0
margin_right = 72.0
margin_bottom = 104.0
custom_constants/separation = 9
alignment = 1

[node name="Label" type="Label" parent="Control/Quit"]
margin_left = 15.0
margin_top = 19.0
margin_right = 57.0
margin_bottom = 31.0
rect_min_size = Vector2( 42, 12 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "quit?"
align = 1
valign = 1
uppercase = true

[node name="No" type="Label" parent="Control/Quit"]
margin_left = 27.0
margin_top = 40.0
margin_right = 45.0
margin_bottom = 52.0
rect_min_size = Vector2( 18, 12 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "no"
align = 1
valign = 1
uppercase = true

[node name="Slot" type="VBoxContainer" parent="Control"]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 104.0
custom_constants/separation = 5
alignment = 1

[node name="0" type="HBoxContainer" parent="Control/Slot"]
margin_top = 13.0
margin_right = 60.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 4
custom_constants/separation = 2

[node name="Player" type="Control" parent="Control/Slot/0"]
margin_right = 8.0
margin_bottom = 12.0
rect_min_size = Vector2( 8, 12 )

[node name="Sprite" type="Sprite" parent="Control/Slot/0/Player"]
material = SubResource( 12 )
position = Vector2( 4, 2 )
texture = ExtResource( 19 )
hframes = 7
vframes = 2
region_rect = Rect2( 40, 0, 8, 24 )

[node name="Image0" type="Control" parent="Control/Slot/0"]
margin_left = 10.0
margin_right = 18.0
margin_bottom = 12.0
rect_min_size = Vector2( 8, 8 )

[node name="Sprite" type="Sprite" parent="Control/Slot/0/Image0"]
modulate = Color( 1, 0.92549, 0.152941, 1 )
position = Vector2( 4, 6 )
texture = ExtResource( 20 )

[node name="Label0" type="Label" parent="Control/Slot/0"]
margin_left = 20.0
margin_top = 2.0
margin_right = 34.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )
text = "11"
uppercase = true

[node name="Image1" type="Control" parent="Control/Slot/0"]
margin_left = 36.0
margin_right = 44.0
margin_bottom = 12.0
rect_min_size = Vector2( 8, 8 )

[node name="Sprite" type="Sprite" parent="Control/Slot/0/Image1"]
modulate = Color( 0.160784, 0.678431, 1, 1 )
position = Vector2( 0, 2 )
texture = ExtResource( 16 )
centered = false
hframes = 4
vframes = 4
frame = 5

[node name="Label1" type="Label" parent="Control/Slot/0"]
margin_left = 46.0
margin_top = 2.0
margin_right = 60.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )
text = "22"
uppercase = true

[node name="1" type="HBoxContainer" parent="Control/Slot"]
margin_top = 30.0
margin_right = 60.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 4
custom_constants/separation = 2

[node name="Player" type="Control" parent="Control/Slot/1"]
margin_right = 8.0
margin_bottom = 12.0
rect_min_size = Vector2( 8, 12 )

[node name="Sprite" type="Sprite" parent="Control/Slot/1/Player"]
material = SubResource( 11 )
position = Vector2( 4, 2 )
texture = ExtResource( 19 )
hframes = 7
vframes = 2
region_rect = Rect2( 40, 0, 8, 24 )

[node name="Image0" type="Control" parent="Control/Slot/1"]
margin_left = 10.0
margin_right = 18.0
margin_bottom = 12.0
rect_min_size = Vector2( 8, 8 )

[node name="Sprite" type="Sprite" parent="Control/Slot/1/Image0"]
modulate = Color( 1, 0.92549, 0.152941, 1 )
position = Vector2( 4, 6 )
texture = ExtResource( 20 )

[node name="Sprite2" type="Sprite" parent="Control/Slot/1/Image0"]
visible = false
position = Vector2( 0, 2 )
texture = ExtResource( 16 )
centered = false
hframes = 4
vframes = 4
frame = 6

[node name="Label0" type="Label" parent="Control/Slot/1"]
margin_left = 20.0
margin_top = 2.0
margin_right = 34.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )
text = "51"
uppercase = true

[node name="Image1" type="Control" parent="Control/Slot/1"]
margin_left = 36.0
margin_right = 44.0
margin_bottom = 12.0
rect_min_size = Vector2( 8, 8 )

[node name="Sprite" type="Sprite" parent="Control/Slot/1/Image1"]
modulate = Color( 0.160784, 0.678431, 1, 1 )
position = Vector2( 0, 2 )
texture = ExtResource( 16 )
centered = false
hframes = 4
vframes = 4
frame = 5

[node name="Label1" type="Label" parent="Control/Slot/1"]
margin_left = 46.0
margin_top = 2.0
margin_right = 60.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )
text = "73"
uppercase = true

[node name="2" type="HBoxContainer" parent="Control/Slot"]
margin_top = 47.0
margin_right = 60.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 4
custom_constants/separation = 2

[node name="Player" type="Control" parent="Control/Slot/2"]
margin_right = 8.0
margin_bottom = 12.0
rect_min_size = Vector2( 8, 12 )

[node name="Sprite" type="Sprite" parent="Control/Slot/2/Player"]
material = SubResource( 10 )
position = Vector2( 4, 2 )
texture = ExtResource( 19 )
hframes = 7
vframes = 2
region_rect = Rect2( 40, 0, 8, 24 )

[node name="Image0" type="Control" parent="Control/Slot/2"]
margin_left = 10.0
margin_right = 18.0
margin_bottom = 12.0
rect_min_size = Vector2( 8, 8 )

[node name="Sprite" type="Sprite" parent="Control/Slot/2/Image0"]
modulate = Color( 1, 0.92549, 0.152941, 1 )
position = Vector2( 4, 6 )
texture = ExtResource( 20 )

[node name="Label0" type="Label" parent="Control/Slot/2"]
margin_left = 20.0
margin_top = 2.0
margin_right = 34.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )
text = "48"
uppercase = true

[node name="Image1" type="Control" parent="Control/Slot/2"]
margin_left = 36.0
margin_right = 44.0
margin_bottom = 12.0
rect_min_size = Vector2( 8, 8 )

[node name="Sprite" type="Sprite" parent="Control/Slot/2/Image1"]
modulate = Color( 0.160784, 0.678431, 1, 1 )
position = Vector2( 0, 2 )
texture = ExtResource( 16 )
centered = false
hframes = 4
vframes = 4
frame = 5

[node name="Label1" type="Label" parent="Control/Slot/2"]
margin_left = 46.0
margin_top = 2.0
margin_right = 60.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )
text = "96"
uppercase = true

[node name="Open" type="VBoxContainer" parent="Control"]
margin_left = 4.0
margin_top = 32.0
margin_right = 68.0
margin_bottom = 104.0
custom_constants/separation = 5
alignment = 1

[node name="0" type="HBoxContainer" parent="Control/Open"]
margin_left = 13.0
margin_top = 13.0
margin_right = 51.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 4
custom_constants/separation = 2

[node name="Image" type="Control" parent="Control/Open/0"]
margin_right = 12.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )

[node name="Sprite" type="Sprite" parent="Control/Open/0/Image"]
visible = false
position = Vector2( 0, 2 )
texture = ExtResource( 16 )
centered = false
hframes = 4
vframes = 4

[node name="Exit" parent="Control/Open/0/Image" instance=ExtResource( 22 )]
position = Vector2( 3, 3 )

[node name="Label" type="Label" parent="Control/Open/0"]
margin_left = 14.0
margin_top = 2.0
margin_right = 38.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )
text = "map"
uppercase = true

[node name="1" type="HBoxContainer" parent="Control/Open"]
margin_left = 11.0
margin_top = 30.0
margin_right = 53.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 4
custom_constants/separation = 2

[node name="Player" type="Control" parent="Control/Open/1"]
margin_right = 8.0
margin_bottom = 12.0
rect_min_size = Vector2( 8, 12 )

[node name="Sprite" type="Sprite" parent="Control/Open/1/Player"]
material = SubResource( 15 )
position = Vector2( 4, 2 )
texture = ExtResource( 19 )
hframes = 7
vframes = 2
region_rect = Rect2( 40, 0, 8, 24 )

[node name="Image" type="Control" parent="Control/Open/1"]
visible = false
margin_left = 10.0
margin_right = 18.0
margin_bottom = 12.0
rect_min_size = Vector2( 8, 8 )

[node name="Sprite" type="Sprite" parent="Control/Open/1/Image"]
position = Vector2( 0, 2 )
texture = ExtResource( 1 )
centered = false
hframes = 4
frame = 2

[node name="Label" type="Label" parent="Control/Open/1"]
margin_left = 10.0
margin_top = 2.0
margin_right = 42.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )
text = "char"
uppercase = true

[node name="2" type="HBoxContainer" parent="Control/Open"]
margin_left = 7.0
margin_top = 47.0
margin_right = 57.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 4
custom_constants/separation = 2

[node name="Image" type="Control" parent="Control/Open/2"]
margin_right = 8.0
margin_bottom = 12.0
rect_min_size = Vector2( 8, 8 )

[node name="Sprite" type="Sprite" parent="Control/Open/2/Image"]
position = Vector2( 0, 2 )
texture = ExtResource( 16 )
centered = false
hframes = 4
vframes = 4
frame = 15

[node name="Label" type="Label" parent="Control/Open/2"]
margin_left = 10.0
margin_top = 2.0
margin_right = 50.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )
text = "erase"
uppercase = true

[node name="Erase" type="VBoxContainer" parent="Control"]
visible = false
margin_top = 32.0
margin_right = 72.0
margin_bottom = 104.0
custom_constants/separation = 9
alignment = 1

[node name="Label" type="Label" parent="Control/Erase"]
margin_left = 12.0
margin_top = 19.0
margin_right = 60.0
margin_bottom = 31.0
rect_min_size = Vector2( 48, 12 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "erase?"
align = 1
valign = 1
uppercase = true

[node name="No" type="Label" parent="Control/Erase"]
margin_left = 27.0
margin_top = 40.0
margin_right = 45.0
margin_bottom = 52.0
rect_min_size = Vector2( 18, 12 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "no"
align = 1
valign = 1
uppercase = true

[node name="Header" type="Label" parent="Control"]
margin_top = 5.0
margin_right = 228.0
margin_bottom = 26.0
rect_min_size = Vector2( 228, 0 )
custom_fonts/font = SubResource( 4 )
text = "Tiny Crate"
align = 1

[node name="Logo" type="TextureRect" parent="Control"]
modulate = Color( 0, 0.529412, 0.317647, 1 )
margin_left = 115.0
margin_top = 95.0
margin_right = 192.0
margin_bottom = 123.0
texture = ExtResource( 4 )

[node name="Website" type="Label" parent="Control"]
modulate = Color( 0.160784, 0.678431, 1, 1 )
margin_left = 158.0
margin_top = 112.0
margin_right = 227.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 5 )
text = "hhoney.net"
align = 2
valign = 2

[node name="Credits" type="Control" parent="."]
margin_left = 136.0
margin_top = 12.0
margin_right = 176.0
margin_bottom = 52.0

[node name="Header" type="Label" parent="Credits"]
margin_top = 11.0
margin_right = 228.0
margin_bottom = 24.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 18 )
text = "TINY CRATE"
align = 1

[node name="By" type="Label" parent="Credits"]
margin_left = 105.0
margin_top = 25.0
margin_right = 115.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 25 )
text = "by"
align = 1
valign = 1

[node name="HarmonyHoneyLogo" type="Sprite" parent="Credits"]
position = Vector2( 114, 49 )
texture = ExtResource( 4 )

[node name="List" type="Label" parent="Credits"]
margin_top = 59.0
margin_right = 228.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 25 )
text = "hhoney.net

Made with Godot Engine

Fonts by Daniel Linssen"
align = 1
valign = 1

[node name="Stage" type="Node2D" parent="."]

[node name="SolidTileMap" parent="Stage" instance=ExtResource( 11 )]
tile_set = SubResource( 13 )
tile_data = PoolIntArray( 393222, 0, 0, 393223, 0, 1, 393224, 0, 0, 393225, 0, 1, 393226, 536870912, 0, 458758, 0, 1, 524294, 0, 0, 589830, 0, 1, 655366, 536870912, 0, 720902, 0, 1, 786438, 0, 0, 786442, 0, 0, 786443, 0, 1, 786444, 536870912, 0, 786448, 0, 0, 786449, 0, 1, 786450, 536870912, 0, 786451, 0, 1, 786452, 0, 0, 786453, 0, 1, 786454, 536870912, 0 )

[node name="DetailTileMap" parent="Stage" instance=ExtResource( 8 )]
z_index = -11
tile_set = SubResource( 19 )
tile_data = PoolIntArray( 131093, 536870916, 3, 131094, 4, 1, 131095, 4, 0, 131096, 4, 3, 196624, 5, 2, 196625, 5, 0, 196626, -1610612731, 2, 196630, 536870916, 0, 196631, 4, 1, 196632, 4, 0, 262154, 536870916, 3, 262155, 536870916, 0, 262156, 4, 3, 262159, 5, 2, 262160, 5, 0, 262161, 5, 0, 262162, 5, 0, 262163, -1610612731, 2, 262166, 4, 1, 262167, 4, 0, 262168, 4, 1, 327685, 5, 2, 327686, 5, 0, 327687, 5, 0, 327688, 5, 0, 327689, 536870917, 2, 327690, 536870916, 0, 327691, 4, 1, 327692, 4, 0, 327695, -1610612731, 0, 327696, 5, 0, 327697, 5, 0, 327698, 5, 0, 327699, -1073741819, 0, 327701, 536870916, 3, 327702, 4, 0, 327703, 4, 1, 327704, 536870916, 2, 393221, -1073741819, 0, 393227, 4, 1, 393228, 4, 0, 393229, 4, 3, 393231, -1073741819, 2, 393232, 5, 0, 393233, 5, 0, 393234, 5, 0, 393235, -536870907, 2, 393237, 536870916, 0, 393238, 4, 1, 393239, 536870916, 0, 458757, -1073741819, 2, 458759, -1610612731, 2, 458762, 4, 1, 458763, 536870916, 0, 458764, 4, 1, 458765, 4, 0, 458768, -1073741819, 2, 458769, 5, 0, 458770, 1610612741, 2, 458773, 4, 2, 458774, 4, 0, 458775, 4, 1, 458776, 4, 3, 524295, -1610612731, 0, 524298, 4, 2, 524299, 4, 1, 524300, 536870916, 0, 524301, 4, 1, 524302, 4, 3, 524305, 6, 0, 524310, 4, 2, 524311, 536870916, 0, 524312, 536870916, 2, 589831, -1610612730, 0, 589832, -1610612731, 0, 589836, 4, 2, 589837, 4, 1, 589838, 4, 0, 589839, 4, 3, 589841, 6, 0, 589842, -536870907, 2, 655367, -1610612731, 0, 655373, 536870916, 3, 655374, 4, 1, 655375, 536870916, 0, 655377, 6, 0, 720901, -2147483643, 2, 720903, -536870907, 2, 720905, 5, 2, 720906, 5, 0, 720907, 5, 0, 720908, 536870917, 2, 720909, 536870916, 3, 720910, 536870916, 0, 720911, 536870916, 2, 720912, 5, 2, 720913, 6, 0, 720914, 5, 0, 720915, 536870917, 2, 720917, 5, 2, 720918, 5, 0, 720919, 536870917, 2, 786437, -2147483643, 0, 786441, -1073741819, 0, 786455, -1610612731, 0, 851973, -1073741819, 2, 851974, 1610612741, 2, 851977, 1073741829, 2, 851978, 5, 0, 851979, 1610612741, 2, 851982, 4, 1, 851983, 4, 0, 851987, 1073741829, 2, 851988, 5, 0, 851989, 6, 0, 851990, 5, 0, 851991, -536870907, 2, 917517, 536870916, 0, 917518, 4, 1, 917519, 536870916, 2, 917525, 1610612741, 2, 983053, 4, 2, 983054, 4, 0, 983055, 536870916, 2 )

[node name="GameCamera" parent="Stage" instance=ExtResource( 13 )]
position = Vector2( 90, 76 )
bounds = Rect2( 300, 200, 300, 200 )

[node name="Actors" type="Node2D" parent="Stage"]
script = ExtResource( 10 )

[node name="Player" parent="Stage/Actors" instance=ExtResource( 12 )]
position = Vector2( 88, 88 )
is_attract_mode = true

[node name="Box0" parent="Stage/Actors" instance=ExtResource( 9 )]
position = Vector2( 160, 88 )

[node name="Box1" parent="Stage/Actors" instance=ExtResource( 9 )]
position = Vector2( 164, 80 )

[node name="Box2" parent="Stage/Actors" instance=ExtResource( 9 )]
position = Vector2( 160, 72 )

[node name="Box3" parent="Stage/Actors" instance=ExtResource( 9 )]
position = Vector2( 64, 40 )

[node name="SwitchBlue" parent="Stage/Actors" instance=ExtResource( 15 )]
position = Vector2( 64, 44 )

[node name="SwitchBlockBlue" parent="Stage/Actors" instance=ExtResource( 14 )]
position = Vector2( 104, 96 )

[node name="SwitchBlockBlue2" parent="Stage/Actors" instance=ExtResource( 14 )]
position = Vector2( 112, 96 )

[node name="SwitchBlockBlue3" parent="Stage/Actors" instance=ExtResource( 14 )]
position = Vector2( 120, 96 )

[editable path="Stage/GameCamera"]
